--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -105,9 +105,9 @@
    <widget class="QWidget" name="verticalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>330</x>
       <y>320</y>
-      <width>331</width>
+      <width>371</width>
       <height>121</height>
      </rect>
     </property>
@@ -116,6 +116,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLabel" name="trainAccuracy_label_2">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Traing accuracy:</string>
          </property>
@@ -123,6 +128,11 @@
        </item>
        <item>
         <widget class="QLabel" name="trainAccuracy_label">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>11</string>
          </property>
@@ -134,6 +144,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
         <widget class="QLabel" name="trainAccuracy_label_3">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Test accuracy:</string>
          </property>
@@ -141,6 +156,11 @@
        </item>
        <item>
         <widget class="QLabel" name="testAccuracy_label">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>11</string>
          </property>
@@ -152,6 +172,11 @@
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <item>
         <widget class="QLabel" name="trainAccuracy_label_5">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>Weight:</string>
          </property>
@@ -159,6 +184,11 @@
        </item>
        <item>
         <widget class="QLabel" name="weight_label">
+         <property name="font">
+          <font>
+           <pointsize>12</pointsize>
+          </font>
+         </property>
          <property name="text">
           <string>333</string>
          </property>
@@ -168,10 +198,20 @@
      </item>
     </layout>
    </widget>
-   <widget class="MplWidget" name="MplWidget" native="true">
+   <widget class="MplWidget" name="train_mplWidget" native="true">
     <property name="geometry">
      <rect>
       <x>50</x>
+      <y>50</y>
+      <width>291</width>
+      <height>221</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="MplWidget" name="test_mplWidget" native="true">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
       <y>50</y>
       <width>291</width>
       <height>221</height>
